// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FacebookIntegrationNavigation/> should display the Ads tab when Instagram ads are enabled 1`] = `
<FacebookIntegrationNavigation
  integration={
    Immutable.Map {
      "id": 1,
      "type": "facebook",
      "meta": Immutable.Map {
        "settings": Immutable.Map {
          "instagram_ads_enabled": true,
        },
      },
    }
  }
>
  <SecondaryNavbar>
    <Navbar
      className="navbar"
      expand={false}
      tag="nav"
    >
      <nav
        className="navbar navbar"
      >
        <Link
          activeClassName="disabled"
          className="nav-link"
          key=".$/app/settings/integrations/facebook/1/overview"
          to="/app/settings/integrations/facebook/1/overview"
        >
          <a
            activeClassName="disabled"
            className="nav-link"
            to="/app/settings/integrations/facebook/1/overview"
          >
            Overview
          </a>
        </Link>
        <Link
          activeClassName="disabled"
          className="nav-link"
          key=".$/app/settings/integrations/facebook/1/customer_chat"
          to="/app/settings/integrations/facebook/1/customer_chat"
        >
          <a
            activeClassName="disabled"
            className="nav-link"
            to="/app/settings/integrations/facebook/1/customer_chat"
          >
            Customer chat
          </a>
        </Link>
        <Link
          activeClassName="disabled"
          className="nav-link"
          key=".$/app/settings/integrations/facebook/1/preferences"
          to="/app/settings/integrations/facebook/1/preferences"
        >
          <a
            activeClassName="disabled"
            className="nav-link"
            to="/app/settings/integrations/facebook/1/preferences"
          >
            Preferences
          </a>
        </Link>
        <Link
          activeClassName="disabled"
          className="nav-link"
          key=".$/app/settings/integrations/facebook/1/ads"
          to="/app/settings/integrations/facebook/1/ads"
        >
          <a
            activeClassName="disabled"
            className="nav-link"
            to="/app/settings/integrations/facebook/1/ads"
          >
            Instagram ads
          </a>
        </Link>
      </nav>
    </Navbar>
  </SecondaryNavbar>
</FacebookIntegrationNavigation>
`;

exports[`<FacebookIntegrationNavigation/> should not display the Ads tab when ads are disabled 1`] = `
<FacebookIntegrationNavigation
  integration={
    Immutable.Map {
      "id": 1,
      "type": "facebook",
    }
  }
>
  <SecondaryNavbar>
    <Navbar
      className="navbar"
      expand={false}
      tag="nav"
    >
      <nav
        className="navbar navbar"
      >
        <Link
          activeClassName="disabled"
          className="nav-link"
          key=".$/app/settings/integrations/facebook/1/overview"
          to="/app/settings/integrations/facebook/1/overview"
        >
          <a
            activeClassName="disabled"
            className="nav-link"
            to="/app/settings/integrations/facebook/1/overview"
          >
            Overview
          </a>
        </Link>
        <Link
          activeClassName="disabled"
          className="nav-link"
          key=".$/app/settings/integrations/facebook/1/customer_chat"
          to="/app/settings/integrations/facebook/1/customer_chat"
        >
          <a
            activeClassName="disabled"
            className="nav-link"
            to="/app/settings/integrations/facebook/1/customer_chat"
          >
            Customer chat
          </a>
        </Link>
        <Link
          activeClassName="disabled"
          className="nav-link"
          key=".$/app/settings/integrations/facebook/1/preferences"
          to="/app/settings/integrations/facebook/1/preferences"
        >
          <a
            activeClassName="disabled"
            className="nav-link"
            to="/app/settings/integrations/facebook/1/preferences"
          >
            Preferences
          </a>
        </Link>
      </nav>
    </Navbar>
  </SecondaryNavbar>
</FacebookIntegrationNavigation>
`;
